--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "seed": "node database/seedUsers.js",
     "test": "jest --watchAll --verbose",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "seedJournals": "node database/seedJournals.js"
   },
   "keywords": [],
   "author": "",
